# twitter-x-account-monitor

./: .env.example  .gitignore  README.md  monitor.py  pyproject.toml  requirements.txt  usage.py
docs/: usage-costs.md
src/twitter_monitor/: cli.py  config.py  logging_setup.py  monitor.py  notifiers.py  state.py  usage.py  x_client.py
